<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/for_back"
    tools:context=".DishSelection">

    <TextView
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/order"
        android:textColor="@color/for_text"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/order"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@color/black"
        android:paddingBottom="15dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/order_cont"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button"
            android:layout_width="147dp"
            android:layout_height="53dp"
            android:layout_marginStart="132dp"
            android:layout_marginTop="332dp"
            android:background="@drawable/oval_button"
            android:text="@string/btnForOrder"
            android:textColor="@color/for_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/category"
            android:textColor="@color/for_text"
            app:layout_constraintBottom_toTopOf="@+id/DishName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/DishName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/nameDish"
            android:textColor="@color/for_text"
            app:layout_constraintBottom_toTopOf="@+id/Price"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/price"
            android:textColor="@color/for_text"
            app:layout_constraintBottom_toTopOf="@+id/Weight"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/Weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/weight"
            android:textColor="@color/for_text"
            app:layout_constraintBottom_toTopOf="@+id/Amount"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/Amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="369dp"
            android:text="@string/amount"
            android:textColor="@color/for_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>