<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/for_back"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/Menu"
        android:textColor="@color/for_text"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/menu"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@color/black"
        android:paddingBottom="15dp" />

    <LinearLayout
        android:id="@+id/first_cont"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/eat1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/Eat1"
            android:textColor="@color/for_text"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_more_one"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_weight="1"
            android:text="@string/btnmore"
            android:textColor="@color/for_text"
            android:textSize="10sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/soup_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_cont"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/image_soup1"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/img1" />

        <ImageView
            android:id="@+id/image_soup2"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/img2" />

        <ImageView
            android:id="@+id/image_soup3"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/img3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/eat2"
            android:layout_width="541dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/Eat2"
            android:textColor="@color/for_text"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_more_sec"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:text="@string/btnmore"
            android:textColor="@color/for_text"
            android:textSize="10sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dish_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/second_cont"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/image_dish1"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/img4" />

        <ImageView
            android:id="@+id/image_dish2"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/img5" />

        <ImageView
            android:id="@+id/image_dish3"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/img6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="330dp"
        android:layout_marginStart="330dp"
        android:orientation="horizontal">


        <Button
            android:onClick="addMe"
            android:id="@+id/BtnAdd"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/oval_button"
            android:text="@string/btnadd"
            android:textAllCaps="false"
            android:textColor="@color/for_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content" />
    </LinearLayout>


</RelativeLayout>
